--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>kono shomosshai shomossha nah jodi tumi boshe nah thako</h2>
+    <img width="400px" src="Images/images.jpeg" alt="">
 </body>
 </html>
